[gd_scene load_steps=3 format=3 uid="uid://e5nfnk8f16ha"]

[ext_resource type="Script" path="res://scenes/menus/pause_menu.gd" id="1_6io4i"]
[ext_resource type="PackedScene" uid="uid://knndccnkckoa" path="res://scenes/menus/settings_menu.tscn" id="2_y6fa6"]

[node name="PauseMenuController" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6io4i")

[node name="PauseMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.254902, 0.254902, 0.254902, 0.498039)

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -68.0
offset_right = 48.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Settings" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="MainMenu" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Quit" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="SettingsMenu" parent="." instance=ExtResource("2_y6fa6")]
visible = false
layout_mode = 1

[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
